fix: align style bug

--- a/src/components/scrollbar/css/scrollbar.scss
+++ b/src/components/scrollbar/css/scrollbar.scss
@@ -15,7 +15,6 @@
 .as-scrollbar__wrap {
   overflow: auto;
   height: 100%;
-  width: 100%;
 }
 
 .as-scrollbar__wrap--hidden-default {
